<resources>
    <string name="app_name">To Do Application</string>
    <string name="no_todo">No todos to display</string>
    <string name="app_version">Version: 1.0</string>
    <string name="made_by">Made by Saif</string>
    <string name="contact_me">You can contact me at</string>
    <string name="email_address">saif.as7777@gmail.com</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="no_data_available">No Tasks to show, click + to add new Task</string>
    <string name="write_to_db_error">Some thing went wrong with inserting into database</string>
    <string name="cannot_find_item_in_db">Cannot find required item in database</string>
    <string name="facebook_app_id">520270708310083</string>
    <string name="fb_login_protocol_scheme">fb520270708310083</string>
    <string name="fb_login_canceled">Facebook login has been canceled</string>
    <string name="fb_login_error">Facebook login have error</string>
    <string-array name="time">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
</resources>
